--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"start": "craco start",
 		"build": "craco build",
 		"test": "craco test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"dev": "TAILWIND_MODE=watch postcss -i tailwind.css -o build.css --watch",
+		"build2": "postcss -i tailwind.css -o build.css --minify"
 	},
 	"eslintConfig": {
 		"extends": [
