--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
+		"@vitejs/plugin-react": "^1.0.9",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
-		"start": "vite",
+		"dev": "vite",
 		"build": "tsc && vite build",
-		"serve": "vite preview",
-		"eject": "react-scripts eject",
-		"dev": "TAILWIND_MODE=watch postcss -i tailwind.css -o build.css --watch",
-		"build2": "postcss -i tailwind.css -o build.css --minify"
+		"serve": "vite preview"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -43,11 +41,11 @@
 		]
 	},
 	"devDependencies": {
+		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"autoprefixer": "^9",
 		"postcss": "^7",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
 		"vite": "^2.3.2",
-		"vite-plugin-svgr": "^0.3.0",
-		"@vitejs/plugin-react-refresh": "^1.3.1"
+		"vite-plugin-svgr": "^0.3.0"
 	}
 }
