--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"autoprefixer": "^9",
 		"postcss": "^7",
+		"sass": "^1.43.4",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
 		"vite": "^2.3.2",
 		"vite-plugin-svgr": "^0.3.0"
