--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@vitejs/plugin-react": "^1.0.9",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"swiper": "^7.3.0",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1"
 	},
