--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
+		"@types/node": "^17.0.5",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@vitejs/plugin-react": "^1.0.9",
@@ -20,7 +20,7 @@
 	},
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build": "vite build",
 		"serve": "vite preview"
 	},
 	"eslintConfig": {
@@ -42,6 +42,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/babel__core": "^7.1.17",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"autoprefixer": "^9",
 		"postcss": "^7",
