--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
 		"@types/babel__core": "^7.1.17",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"autoprefixer": "^9",
-		"postcss": "^7",
+		"postcss": "^8.4.5",
 		"sass": "^1.43.4",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
+		"tailwindcss": "^3.0.9",
 		"vite": "^2.3.2",
 		"vite-plugin-svgr": "^0.3.0"
 	}
