--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@vitejs/plugin-react": "^1.0.9",
+		"classnames": "^2.3.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "6",
 		"swiper": "^7.3.0",
 		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^1.0.1",
+		"webfontloader": "^1.6.28"
 	},
 	"scripts": {
 		"dev": "vite",
