--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "6",
+		"react-spring": "^9.4.4",
 		"swiper": "^7.3.0",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1",
