--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/react-dom": "^17.0.0",
 		"@vitejs/plugin-react": "^1.0.9",
 		"classnames": "^2.3.1",
+		"history": "5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "6",
@@ -46,6 +47,7 @@
 		]
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.2",
 		"@types/babel__core": "^7.1.17",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"autoprefixer": "^9",
