--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/react-dom": "^17.0.0",
 		"@vitejs/plugin-react": "^1.0.9",
 		"classnames": "^2.3.1",
+		"hamburger-react": "^2.4.1",
 		"history": "5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
