--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"history": "5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.8.0",
 		"react-insta-stories": "^2.5.4",
 		"react-router-dom": "6",
 		"react-spring": "^9.4.4",
